adiciona função para sortear um amigo da lista de participantes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
             <div class="button-container">
                 <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
+                    <p id="amigoSorteado"></p>
                     <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
                     Sortear amigo
                 </button>
